Added some goal based stuff for AI and fleshed out AI comp a bit

--- a/NewComponentEngine.cbp
+++ b/NewComponentEngine.cbp
@@ -57,6 +57,8 @@
 		<Unit filename="GfxComp.cpp" />
 		<Unit filename="GfxComp.h" />
 		<Unit filename="GfxSys.cpp" />
+		<Unit filename="Goal.cpp" />
+		<Unit filename="Goal.h" />
 		<Unit filename="HealthComp.cpp" />
 		<Unit filename="HealthComp.h" />
 		<Unit filename="HealthSys.cpp" />
