--- a/NewComponentEngine.cbp
+++ b/NewComponentEngine.cbp
@@ -7,8 +7,8 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/NewComponentEngine" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Debug/" />
+				<Option output="bin\Debug\NewComponentEngine" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj\Debug\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -16,8 +16,8 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/NewComponentEngine" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Release/" />
+				<Option output="bin\Release\NewComponentEngine" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj\Release\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -34,12 +34,15 @@
 		</Compiler>
 		<Linker>
 			<Add library="sfml-graphics" />
+			<Add library="sfml-main" />
 			<Add library="sfml-window" />
-			<Add library="sfml-system" />
 			<Add library="sfml-audio" />
+			<Add library="sfml-system" />
 		</Linker>
 		<Unit filename="AiComp.cpp" />
 		<Unit filename="AiComp.h" />
+		<Unit filename="AiManager.cpp" />
+		<Unit filename="AiManager.h" />
 		<Unit filename="AiSys.cpp" />
 		<Unit filename="AudioComp.cpp" />
 		<Unit filename="AudioComp.h" />
@@ -59,6 +62,8 @@
 		<Unit filename="GfxSys.cpp" />
 		<Unit filename="Goal.cpp" />
 		<Unit filename="Goal.h" />
+		<Unit filename="GoalBuilders.cpp" />
+		<Unit filename="GoalBuilders.h" />
 		<Unit filename="HealthComp.cpp" />
 		<Unit filename="HealthComp.h" />
 		<Unit filename="HealthSys.cpp" />
@@ -102,6 +107,7 @@
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
