--- a/NewComponentEngine.cbp
+++ b/NewComponentEngine.cbp
@@ -22,6 +22,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-DSFML_DYNAMIC" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -31,6 +32,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add option="-DSFML_DYNAMIC" />
 		</Compiler>
 		<Linker>
 			<Add library="sfml-graphics" />
@@ -57,6 +59,9 @@
 		<Unit filename="CoordsSys.cpp" />
 		<Unit filename="Core.cpp" />
 		<Unit filename="Core.h" />
+		<Unit filename="EventComp.cpp" />
+		<Unit filename="EventComp.h" />
+		<Unit filename="EventSys.cpp" />
 		<Unit filename="GfxComp.cpp" />
 		<Unit filename="GfxComp.h" />
 		<Unit filename="GfxSys.cpp" />
