Added Trigger Comp/Sys so objects can be triggered via other objects - i.e. can now have multiple gun objects on one ship

--- a/NewComponentEngine.cbp
+++ b/NewComponentEngine.cbp
@@ -106,6 +106,9 @@
 		<Unit filename="Systems.h" />
 		<Unit filename="Telegram.cpp" />
 		<Unit filename="Telegram.h" />
+		<Unit filename="TriggerComp.cpp" />
+		<Unit filename="TriggerComp.h" />
+		<Unit filename="TriggerSub.cpp" />
 		<Unit filename="TypeDefs.h" />
 		<Unit filename="Ui.cpp" />
 		<Unit filename="Ui.h" />
